enrich JVM6